adding css sheet

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Mark Portfolio</title>
 </head>
 <body>
-    <h1>First Header</h1>
-    <h2>Second Header</h2>
-    <h3>Third Header for fun</h3>
+    <h1>Mark Rosenkrans</h1>
+    <h2>Software Engineer</h2>
+
+
+
+
+    <h3></h3>
+
+    
+    
 </body>
 </html>
