updated pic and list

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <h1>Mark Rosenkrans</h1>
     <h2>Software Engineer and Farmer</h2>
 
+		<img src="images/Mexican-Coca-Cola.jpg" alt="Picture of Coke" class="coke">
 
 
+		<ul>
+			<li>About Me</li>
+			<li>Software Projects</li>
+			<li>Farm Information</li>
+			<li>Contact Me</li>
 
-    <h3></h3>
+		</ul>
+		
 
     
     
