updated majority of page

--- a/index.html
+++ b/index.html
@@ -7,23 +7,54 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Mark Portfolio</title>
 </head>
+
 <body>
     <h1>Mark Rosenkrans</h1>
     <h2>Software Engineer and Farmer</h2>
 
+		
 		<img src="images/Mexican-Coca-Cola.jpg" alt="Picture of Coke" class="coke">
 
 
-		<ul>
-			<li>About Me</li>
-			<li>Software Projects</li>
-			<li>Farm Information</li>
-			<li>Contact Me</li>
+		<ul class="links">
+			<li><u>About Me</u></li>
+			<li><u>Software Projects</u></li>
+			<li><u>Farm Information</u></li>
+			<li><u>Contact Me</u></li>
 
 		</ul>
-		
 
-    
+
+		<h3>About Me</h3>
+		<p class="pro-p">Professionally my background is in IT, project management, and now software development. 
+			My projects are listed on this website. 
+			As a side profession, I am an organic gardener. 
+			My produce is sold here in Atlanta. </p>
+		
+		<h3>Software Projects</h3>
+		<p class="pro-p">Here lies some info about my software projects...</p>
+
+		<h3>Farm Information</h3>
+		<p class="pro-p">I have been growing my own produce for 8 years and, this year, I started to sell the excess.
+			My current produce list is:
+		</p>
+
+		<ul class="produce">
+			<li>Tomatoes</li>
+			<li>Squash</li>
+			<li>Eggplant</li>
+			<li>Bell Peppers</li>
+			<li>Jalapeno Peppers</li>
+			<li>Okra</li>
+			<li>Sugar Snap Peas</li>
+
+
+
+		</ul>
+
+		<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
+			<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
+    </a>
     
 </body>
 </html>
