changed colors and added border

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 
 		<h3>About Me</h3>
-		<p class="pro-p">Professionally my background is in IT, project management, and now software development. 
-			My projects are listed on this website. 
+		<p class="pro-p">I am a software developer living in Atlanta, GA. My background is in IT and Scrum/Project Management. 
+			To view my projects, click here. 
 			As a side profession, I am an organic gardener. 
 			My produce is sold here in Atlanta. </p>
 		
