added about me link and more content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 		<ul class="links">
-			<li><u>About Me</u></li>
+			<li><a href="#about-me-blurb"><u>About Me</u></a></li>
 			<li><u>Software Projects</u></li>
 			<li><u>Farm Information</u></li>
 			<li><u>Contact Me</u></li>
@@ -25,11 +25,12 @@
 		</ul>
 
 
-		<h3>About Me</h3>
+		<h3><a id="about-me-blurb">About Me</a></h3>
 		<p class="pro-p">I am a software developer living in Atlanta, GA. My background is in IT and Scrum/Project Management. 
 			To view my projects, click here. 
 			As a side profession, I am an organic gardener. 
-			My produce is sold here in Atlanta. </p>
+			My produce is sold here in Atlanta.
+			To view my farm information, click here. </p>
 		
 		<h3>Software Projects</h3>
 		<p class="pro-p">Here lies some info about my software projects...</p>
@@ -47,10 +48,29 @@
 			<li>Jalapeno Peppers</li>
 			<li>Okra</li>
 			<li>Sugar Snap Peas</li>
-
-
+			<li>Black-eyed Peas</li>
+			<li>Cabbage</li>
+			<li>Lettuce</li>
+			<li>Spinach</li>
+			<li>Arugula</li>
+			<li>Potatoes</li>
+			<li>Red Onions</li>
+			<li>White Onions</li>
+			<li>Green Onions</li>
+			<li>Carrots</li>
+			<li>Raspberries</li>
+			<li>Strawberries</li>
+			<li>Blueberries</li>
+			<li>Nectarines</li>
+			<li>Plums</li>
 
 		</ul>
+
+
+		<h3>Contact Me</h3>
+		<p>Email Me</p>
+		<p>My LinkedIn Profile</p>
+
 
 		<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
 			<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
