added a pic and changed borders

--- a/index.html
+++ b/index.html
@@ -9,36 +9,51 @@
 </head>
 
 <body>
+
+		<ul class="links">
+				<li><a href="#about-me-blurb"><u>About Me</u></a></li>
+				<li><u>Software Projects</u></li>
+				<li><u>Farm Information</u></li>
+				<li><u>Contact Me</u></li>
+	
+			</ul>
+
     <h1>Mark Rosenkrans</h1>
     <h2>Software Engineer and Farmer</h2>
 
 		
-		<img src="images/Mexican-Coca-Cola.jpg" alt="Picture of Coke" class="coke">
+		<img src="images/mark1.png" alt="Picture of Mark" class="markpic">
 
 
-		<ul class="links">
-			<li><a href="#about-me-blurb"><u>About Me</u></a></li>
-			<li><u>Software Projects</u></li>
-			<li><u>Farm Information</u></li>
-			<li><u>Contact Me</u></li>
+		
 
-		</ul>
-
-
+		<div class="p-sections">
 		<h3><a id="about-me-blurb">About Me</a></h3>
-		<p class="pro-p">I am a software developer living in Atlanta, GA. My background is in IT and Scrum/Project Management. 
+		<p  
+		class="pro-p">I am a software developer living in Atlanta, GA. 
+			My background is in IT and Scrum/Project Management. 
 			To view my projects, click here. 
 			As a side profession, I am an organic gardener. 
 			My produce is sold here in Atlanta.
 			To view my farm information, click here. </p>
 		
+		</div>
+
+
+		<div class="p-sections">
 		<h3>Software Projects</h3>
 		<p class="pro-p">Here lies some info about my software projects...</p>
+		
+		</div>
 
+		<div class="p-sections">
 		<h3>Farm Information</h3>
 		<p class="pro-p">I have been growing my own produce for 8 years and, this year, I started to sell the excess.
 			My current produce list is:
 		</p>
+
+	
+
 
 		<ul class="produce">
 			<li>Tomatoes</li>
@@ -66,7 +81,10 @@
 
 		</ul>
 
+		</div>
 
+
+		<div class="p-sections">
 		<h3>Contact Me</h3>
 		<p>Email Me</p>
 		<p>My LinkedIn Profile</p>
@@ -75,6 +93,9 @@
 		<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
 			<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
     </a>
-    
+		
+	</div>
+
+
 </body>
 </html>
