added more links and paragraph words

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 		<ul class="links">
 				<li><a href="#about-me-blurb"><u>About Me</u></a></li>
-				<li><u>Software Projects</u></li>
-				<li><u>Farm Information</u></li>
-				<li><u>Contact Me</u></li>
+				<li><a href="#software-projects"><u>Software Projects</u></a></li>
+				<li><a href="#farm-info"><u>Farm Information</u></a></li>
+				<li><a href="#contact-me"><u>Contact Me</u></a></li>
 	
 			</ul>
 
@@ -29,25 +29,27 @@
 
 		<div class="p-sections">
 		<h3><a id="about-me-blurb">About Me</a></h3>
-		<p  
-		class="pro-p">I am a software developer living in Atlanta, GA. 
+		<p class="pro-p">I am a software developer living in Atlanta, GA. 
 			My background is in IT and Scrum/Project Management. 
-			To view my projects, click here. 
+			To view my projects, click <a href="#software-projects">here</a>. 
 			As a side profession, I am an organic gardener. 
 			My produce is sold here in Atlanta.
-			To view my farm information, click here. </p>
+			To view my farm information, click <a href="#farm-info">here</a>. </p>
 		
 		</div>
 
 
 		<div class="p-sections">
-		<h3>Software Projects</h3>
+		<h3 id="software-projects">Software Projects</h3>
 		<p class="pro-p">Here lies some info about my software projects...</p>
+		<p>This is my first portfolio page for the GA Software Engineering course.
+			More projects to come...
+		</p>
 		
 		</div>
 
 		<div class="p-sections">
-		<h3>Farm Information</h3>
+		<h3 id="farm-info">Farm Information</h3>
 		<p class="pro-p">I have been growing my own produce for 8 years and, this year, I started to sell the excess.
 			My current produce list is:
 		</p>
@@ -55,7 +57,7 @@
 	
 
 
-		<ul class="produce">
+		<ul class="produce" style="list-style-type:none;">
 			<li>Tomatoes</li>
 			<li>Squash</li>
 			<li>Eggplant</li>
@@ -85,16 +87,19 @@
 
 
 		<div class="p-sections">
-		<h3>Contact Me</h3>
-		<p>Email Me</p>
-		<p>My LinkedIn Profile</p>
+		<h3 id="contact-me">Contact Me</h3>
+		<p>My Email:</p>
+		<p>mark.rosenkrans@gmail.com</p>
 
+		<p>My LinkedIn Profile:</p>
 
 		<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
 			<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
     </a>
 		
-	</div>
+	
+
+		</div>
 
 
 </body>
