added facebook pic/image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 			<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
     </a>
 		
-	
+		<p>My Farm Facebook Page:</p>
+		
+		<a href="https://www.facebook.com/markshomegrown" target="_blank">	
+			<img src="images/facebook.png" alt="facebook" id="facebook">
+    </a>
 
 		</div>
 
