--- a/index.html
+++ b/index.html
@@ -10,101 +10,66 @@
 
 <body>
 
-		<ul class="links">
-				<li><a href="#about-me-blurb"><u>About Me</u></a></li>
-				<li><a href="#software-projects"><u>Software Projects</u></a></li>
-				<li><a href="#farm-info"><u>Farm Information</u></a></li>
-				<li><a href="#contact-me"><u>Contact Me</u></a></li>
+	<ul class="links">
+		<li><a href="#about-me-blurb"><u>About Me</u></a></li>
+		<li><a href="#software-projects"><u>Software Projects</u></a></li>
+		<li><a href="#contact-me"><u>Contact Me</u></a></li>
 	
-			</ul>
+	</ul>
 
     <h1>Mark Rosenkrans</h1>
-    <h2>Software Engineer and Farmer</h2>
+    <h2>Software Engineer</h2>
 
-		
-		<img src="images/mark1.png" alt="Picture of Mark" class="markpic">
+	<img src="images/mark1.png" alt="Picture of Mark" class="markpic">
 
 
 		
 
 		<div class="p-sections">
-		<h3><a id="about-me-blurb">About Me</a></h3>
-		<p class="pro-p">I am a software developer living in Atlanta, GA. 
-			My background is in IT and Scrum/Project Management. 
-			To view my projects, click <a href="#software-projects">here</a>. 
-			As a side profession, I am an organic gardener. 
-			My produce is sold here in Atlanta.
-			To view my farm information, click <a href="#farm-info">here</a>. </p>
+			<h3><a id="about-me-blurb">About Me</a></h3>
+			<p class="pro-p">I am a software developer living in Atlanta, GA. 
+				My background is in IT and Scrum/Project Management. 
+				To view my projects, click <a href="#software-projects">here</a>. 
+			</p>
 		
 		</div>
 
 
 		<div class="p-sections">
-		<h3 id="software-projects">Software Projects</h3>
-		<p class="pro-p">Here lies some info about my software projects...</p>
-		<p>This is my first portfolio page for the GA Software Engineering course.
-			More projects to come...
-		</p>
+			<h3 id="software-projects">Software Projects</h3>
+			<p class="pro-p">Here lies some info about my software projects...</p>
+			<p>This is my first portfolio page for the GA Software Engineering course.
+				More projects to come...
+			</p>
 		
 		</div>
 
 		<div class="p-sections">
-		<h3 id="farm-info">Farm Information</h3>
-		<p class="pro-p">I have been growing my own produce for 8 years and, this year, I started to sell the excess.
-			My current produce list is:
-		</p>
+			<h3 id="farm-info">Farm Information</h3>
+			<p class="pro-p">I have been growing my own produce for 8 years and, this year, I started to sell the excess.
+				My current produce list is:
+			</p>
 
-	
-
-
-		<ul class="produce" style="list-style-type:none;">
-			<li>Tomatoes</li>
-			<li>Squash</li>
-			<li>Eggplant</li>
-			<li>Bell Peppers</li>
-			<li>Jalapeno Peppers</li>
-			<li>Okra</li>
-			<li>Sugar Snap Peas</li>
-			<li>Black-eyed Peas</li>
-			<li>Cabbage</li>
-			<li>Lettuce</li>
-			<li>Spinach</li>
-			<li>Arugula</li>
-			<li>Potatoes</li>
-			<li>Red Onions</li>
-			<li>White Onions</li>
-			<li>Green Onions</li>
-			<li>Carrots</li>
-			<li>Raspberries</li>
-			<li>Strawberries</li>
-			<li>Blueberries</li>
-			<li>Nectarines</li>
-			<li>Plums</li>
-
-		</ul>
+			<ul class="produce" style="list-style-type:none;">
+				<li>Tomatoes</li>
+				<li>Squash</li>
+			</ul>
 
 		</div>
 
 
 		<div class="p-sections">
-		<h3 id="contact-me">Contact Me</h3>
-		<p>My Email:</p>
-		<p>mark.rosenkrans@gmail.com</p>
+			<h3 id="contact-me">Contact Me</h3>
+			<p>My Email:</p>
+			<p>mark.rosenkrans@gmail.com</p>
 
-		<p>My LinkedIn Profile:</p>
+			<p>My LinkedIn Profile:</p>
 
-		<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
-			<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
-    </a>
+			<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
+				<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
+			</a>
 		
-		<p>My Farm Facebook Page:</p>
-		
-		<a href="https://www.facebook.com/markshomegrown" target="_blank">	
-			<img src="images/facebook.png" alt="facebook" id="facebook">
-    </a>
-
 		</div>
-
 
 </body>
 </html>
