--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 	<img src="images/mark1.png" alt="Picture of Mark" class="markpic">
 
 
-		
-
-		<div class="p-sections">
+		<div class="p-sections about-me">
 			<h3><a id="about-me-blurb">About Me</a></h3>
 			<p class="pro-p">I am a software developer living in Atlanta, GA. 
 				My background is in IT and Scrum/Project Management. 
@@ -34,29 +32,15 @@
 		
 		</div>
 
-
-		<div class="p-sections">
+		<div class="p-sections software-projects">
 			<h3 id="software-projects">Software Projects</h3>
-			<p class="pro-p">Here lies some info about my software projects...</p>
-			<p>This is my first portfolio page for the GA Software Engineering course.
-				More projects to come...
+			<p class="pro-p">Not Hangman</p>
+			<p>This is the first project I worked on at General Assembly
+				 using HTML and CSS after a week of learning: 
+				 <a href="http://not-hangman.netlify.com/" target="_blank"></a>
 			</p>
 		
 		</div>
-
-		<div class="p-sections">
-			<h3 id="farm-info">Farm Information</h3>
-			<p class="pro-p">I have been growing my own produce for 8 years and, this year, I started to sell the excess.
-				My current produce list is:
-			</p>
-
-			<ul class="produce" style="list-style-type:none;">
-				<li>Tomatoes</li>
-				<li>Squash</li>
-			</ul>
-
-		</div>
-
 
 		<div class="p-sections">
 			<h3 id="contact-me">Contact Me</h3>
