added spacing and an image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Mark Rosenkrans</h1>
     <h2>Software Engineer</h2>
 
-	<img src="images/mark1.png" alt="Picture of Mark" class="markpic">
+	<img src="images/Mark-5.jpg" alt="Picture of Mark" class="markpic">
 
 
 		<div class="p-sections about-me">
@@ -42,7 +42,7 @@
 		
 		</div>
 
-		<div class="p-sections">
+		<div class="p-sections contact-me">
 			<h3 id="contact-me">Contact Me</h3>
 			<p>My Email:</p>
 			<p>mark.rosenkrans@gmail.com</p>
