--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Mark Rosenkrans</h1>
     <h2>Software Engineer</h2>
 
-	<img src="images/Mark-5.jpg" alt="Picture of Mark" class="markpic">
+	<img src="/images/Mark-5.jpg" alt="Picture of Mark" class="markpic">
 
 
 		<div class="p-sections about-me">
@@ -37,7 +37,7 @@
 			<p class="pro-p">Not Hangman</p>
 			<p>This is the first project I worked on at General Assembly
 				 using HTML and CSS after a week of learning: 
-				 <a href="http://not-hangman.netlify.com/" target="_blank"></a>
+				 <a href="http://not-hangman.netlify.com/" target="_blank">Not Hangman</a>
 			</p>
 		
 		</div>
