--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Mark Portfolio</title>
+    <title>Mark Rosenkrans</title>
 </head>
 
 <body>
@@ -35,9 +35,27 @@
 		<div class="p-sections software-projects">
 			<h3 id="software-projects">Software Projects</h3>
 			<p class="pro-p">Not Hangman</p>
-			<p>This is the first project I worked on at General Assembly
-				 using HTML and CSS after a week of learning: 
+			<p>This is the first project I coded at General Assembly
+				 using HTML, CSS, and JavaScript after two weeks of learning: 
 				 <a href="http://not-hangman.netlify.com/" target="_blank">Not Hangman</a>
+			</p>
+
+			<p>Band App</p>
+			<p>
+				This is the second project I coded at General Assembly using MEHN stack:
+				<a href="https://band-app-seednfeed.herokuapp.com/" target="_blank">Band App</a>
+			</p>
+
+			<p>Budget App</p>
+			<p>
+				This is the third project I coded at General Assembly using MERN stack:
+				<a href="https://budget-app-marksei22.herokuapp.com/" target="_blank">Budget App</a>
+			</p>
+
+			<p>Library App</p>
+			<p>
+				This is the final project I coded at General Assembly using React, Python, and Django:
+				<a href="https://library-book-app.herokuapp.com/" target="_blank">Library App</a>
 			</p>
 		
 		</div>
