changed project div

--- a/index.html
+++ b/index.html
@@ -34,29 +34,30 @@
 
 		<div class="p-sections software-projects">
 			<h3 id="software-projects">Software Projects</h3>
-			<p class="pro-p">Not Hangman</p>
+			
+			<!-- <p class="pro-p">Not Hangman</p> -->
 			<p>This is the first project I coded at General Assembly
-				 using HTML, CSS, and JavaScript after two weeks of learning: 
-				 <a href="http://not-hangman.netlify.com/" target="_blank">Not Hangman</a>
+				using HTML, CSS, and JavaScript after two weeks of learning: 
 			</p>
+			<p><a href="http://not-hangman.netlify.com/" target="_blank">Not Hangman</a></p>
 
-			<p>Band App</p>
+			<!-- <p>Band App</p> -->
 			<p>
 				This is the second project I coded at General Assembly using MEHN stack:
-				<a href="https://band-app-seednfeed.herokuapp.com/" target="_blank">Band App</a>
 			</p>
+			<p><a href="https://band-app-seednfeed.herokuapp.com/" target="_blank">Band App</a></p>
 
-			<p>Budget App</p>
+			<!-- <p>Budget App</p> -->
 			<p>
 				This is the third project I coded at General Assembly using MERN stack:
-				<a href="https://budget-app-marksei22.herokuapp.com/" target="_blank">Budget App</a>
 			</p>
+			<p><a href="https://budget-app-marksei22.herokuapp.com/" target="_blank">Budget App</a></p>
 
-			<p>Library App</p>
+			<!-- <p>Library App</p> -->
 			<p>
 				This is the final project I coded at General Assembly using React, Python, and Django:
-				<a href="https://library-book-app.herokuapp.com/" target="_blank">Library App</a>
 			</p>
+			<p><a href="https://library-book-app.herokuapp.com/" target="_blank">Library App</a></p>
 		
 		</div>
 
