added more to about me

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
 
 		<div class="p-sections about-me">
 			<h3><a id="about-me-blurb">About Me</a></h3>
-			<p class="pro-p">I am a software developer living in Atlanta, GA. 
-				My background is in IT and Scrum/Project Management. 
+			<p class="pro-p">
+				I'm a Software Developer in Atlanta, GA just getting into the field. 
+				My background in IT and Scrum/Project Management. 
+				After years of managing others and being a certified scrum master, 
+				I realized I was more passionate about learning coding, training others,  
+				and helping people with their software needs rather than "cracking the whip".
+
 				To view my projects, click <a href="#software-projects">here</a>. 
 			</p>
 		
@@ -34,7 +39,7 @@
 
 		<div class="p-sections software-projects">
 			<h3 id="software-projects">Software Projects</h3>
-			
+
 			<!-- <p class="pro-p">Not Hangman</p> -->
 			<p>This is the first project I coded at General Assembly
 				using HTML, CSS, and JavaScript after two weeks of learning: 
