--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 
 <body>
 
+	<header class="nav" role="banner">
+		<div class="nav-wrapper">
+			<a href="markrosenkrans.net" class="home">Home</a>
+			<nav role="navigation">
+				<ul id="navigation-menu" class="navigation-menu">
+					<li class="nav-link">
+						<a data-scroll href="#about-me-blurb">"About Me" ::After</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</header> 
+
+
 	<ul class="links">
 		<li><a href="#about-me-blurb"><u>About Me</u></a></li>
 		<li><a href="#software-projects"><u>Software Projects</u></a></li>
@@ -64,6 +78,11 @@
 			</p>
 			<p><a href="https://library-book-app.herokuapp.com/" target="_blank">Library App</a></p>
 		
+		</div>
+
+		<div class="p-sections skills">
+
+
 		</div>
 
 		<div class="p-sections contact-me">
