updated about me

--- a/index.html
+++ b/index.html
@@ -40,14 +40,22 @@
 		<div class="p-sections about-me">
 			<h3><a id="about-me-blurb">About Me</a></h3>
 			<p class="pro-p">
-				I'm a Software Developer in Atlanta, GA just getting into the field. 
-				My background in IT and Scrum/Project Management. 
+				I'm a Software Developer in Atlanta, GA with a background in Scrum/Project Management and IT. 
 				After years of managing others and being a certified scrum master, 
 				I realized I was more passionate about learning coding, training others,  
-				and helping people with their software needs rather than "cracking the whip".
+				and helping people with their software needs. I recently completed a 3 month
+				immersive software enginering course at General Assembly where I learned and implemented
+				best practices for full-stack web development. Throughout the course, I worked with
+				HTML, CSS, JavaScript, React, MongoDB, Mongoose, Node.js, Python, and Django utilizing
+				Github, Visual Studio Code, and Heroku. Currently, I am looking for a software engineer 
+				position with a focus on React.
 
-				To view my projects, click <a href="#software-projects">here</a>. 
 			</p>
+			<p>Outside of coding, I enjoy vegetable gardening, running, and playing snare drum
+				with the Seed & Feed Marching Abominable. 
+			</p>
+			<p>If you woule like to collaborate on a project, please <a href="#contact-me"><u>Contact Me</u></a>!</p>
+			<p>To view my projects, click <a href="#software-projects">here</a>.</p>
 		
 		</div>
 
