added gmail icon

--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
 
 		<div class="p-sections contact-me">
 			<h3 id="contact-me">Contact Me</h3>
-			<p>My Email:</p>
-			<p>mark.rosenkrans@gmail.com</p>
+			<p>Email:</p>
+			<!-- <p>mark.rosenkrans@gmail.com</p> -->
+			<a href="mailto:mark.rosenkrans@gmail.com" target="_blank">
+				<img src="images/gmail-icon.png" alt="gmail" id="gmail">
+			</a>
 
-			<p>My LinkedIn Profile:</p>
+			<p>LinkedIn:</p>
 
 			<a href="https://www.linkedin.com/in/mrosenkrans/" target="_blank">	
 				<img src="images/linkedin.jpg" alt="linkedin" id="linkedin">
