--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
 
-	<header class="nav" role="banner">
+	<!-- <header class="nav" role="banner">
 		<div class="nav-wrapper">
 			<a href="markrosenkrans.net" class="home">Home</a>
 			<nav role="navigation">
 				<ul id="navigation-menu" class="navigation-menu">
 					<li class="nav-link">
-						<a data-scroll href="#about-me-blurb">"About Me" ::After</a>
+						<a data-scroll href="#about-me-blurb">About Me</a>
 					</li>
 				</ul>
 			</nav>
 		</div>
-	</header> 
+	</header>  -->
 
 
-	<ul class="links">
+	<ul class="links topnav">
 		<li><a href="#about-me-blurb"><u>About Me</u></a></li>
 		<li><a href="#software-projects"><u>Software Projects</u></a></li>
 		<li><a href="#contact-me"><u>Contact Me</u></a></li>
@@ -54,7 +54,7 @@
 			<p>Outside of coding, I enjoy vegetable gardening, running, and playing snare drum
 				with the Seed & Feed Marching Abominable. 
 			</p>
-			<p>If you woule like to collaborate on a project, please <a href="#contact-me"><u>Contact Me</u></a>!</p>
+			<p>If you would like to collaborate on a project, please <a href="#contact-me"><u>Contact Me</u></a>!</p>
 			<p>To view my projects, click <a href="#software-projects">here</a>.</p>
 		
 		</div>
