--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
 		</div>
 	</header>  -->
 
+	<div class="topnav">
+		<a class="active" href="#home">Home</a>
+		<a href="#about-me-blurb">About Me</a>
+		<a href="#software-projects">Software Projects</a>
+		<a href="#contact-me">Contact Me</a>
+	</div>
 
-	<ul class="links topnav">
+	<!-- <ul class="links topnav">
 		<li><a href="#about-me-blurb"><u>About Me</u></a></li>
 		<li><a href="#software-projects"><u>Software Projects</u></a></li>
 		<li><a href="#contact-me"><u>Contact Me</u></a></li>
 	
-	</ul>
+	</ul> -->
 
     <h1>Mark Rosenkrans</h1>
     <h2>Software Engineer</h2>
