--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	<img src="/images/Mark-5.jpg" alt="Picture of Mark" class="markpic">
 
 
-		<div class="p-sections about-me">
-			<h3><a id="about-me-blurb">About Me</a></h3>
+		<div class="p-sections about-me" id="about-me-blurb">
+			<h3><a>About Me</a></h3>
 			<p class="pro-p">
 				I'm a Software Developer in Atlanta, GA with a background in Scrum/Project Management and IT. 
 				After years of managing others and being a certified scrum master, 
@@ -65,8 +65,8 @@
 		
 		</div>
 
-		<div class="p-sections software-projects">
-			<h3 id="software-projects">Software Projects</h3>
+		<div class="p-sections software-projects" id="software-projects">
+			<h3>Software Projects</h3>
 
 			<!-- <p class="pro-p">Not Hangman</p> -->
 			<p>This is the first project I coded at General Assembly
@@ -92,15 +92,15 @@
 			</p>
 			<p><a href="https://library-book-app.herokuapp.com/" target="_blank">Library App</a></p>
 		
-		</div>
+		<!-- </div>
 
 		<div class="p-sections skills">
 
 
-		</div>
+		</div> -->
 
-		<div class="p-sections contact-me">
-			<h3 id="contact-me">Contact Me</h3>
+		<div class="p-sections contact-me" id="contact-me">
+			<h3>Contact Me</h3>
 			<p>Email:</p>
 			<!-- <p>mark.rosenkrans@gmail.com</p> -->
 			<a href="mailto:mark.rosenkrans@gmail.com" target="_blank">
