--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 			</p>
 			<p><a href="https://library-book-app.herokuapp.com/" target="_blank">Library App</a></p>
 		
-		<!-- </div>
+		</div>
 
-		<div class="p-sections skills">
+		<!-- <div class="p-sections skills">
 
 
 		</div> -->
