changed about me

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<p>Outside of coding, I enjoy vegetable gardening, running, and playing snare drum
 				with the Seed & Feed Marching Abominable. 
 			</p>
-			<p>If you would like to collaborate on a project, please <a href="#contact-me"><u>Contact Me</u></a>!</p>
+			<p>If you would like to collaborate on a project, please <a href="#contact-me"><u>contact me</u></a>!</p>
 			<p>To view my projects, click <a href="#software-projects">here</a>.</p>
 		
 		</div>
