changed about me div

--- a/index.html
+++ b/index.html
@@ -42,27 +42,28 @@
 
 	<img src="/images/Mark-5.jpg" alt="Picture of Mark" class="markpic">
 
+		<div id="about-me-blurb" class="about-me">
+			<div class="p-sections">
+				<h3><a>About Me</a></h3>
+				<p class="pro-p">
+					I'm a Software Developer in Atlanta, GA with a background in Scrum/Project Management and IT. 
+					After years of managing others and being a certified scrum master, 
+					I realized I was more passionate about learning coding, training others,  
+					and helping people with their software needs. I recently completed a 3 month
+					immersive software enginering course at General Assembly where I learned and implemented
+					best practices for full-stack web development. Throughout the course, I worked with
+					HTML, CSS, JavaScript, React, MongoDB, Mongoose, Node.js, Python, and Django utilizing
+					Github, Visual Studio Code, and Heroku. Currently, I am looking for a software engineer 
+					position with a focus on React.
 
-		<div class="p-sections about-me" id="about-me-blurb">
-			<h3><a>About Me</a></h3>
-			<p class="pro-p">
-				I'm a Software Developer in Atlanta, GA with a background in Scrum/Project Management and IT. 
-				After years of managing others and being a certified scrum master, 
-				I realized I was more passionate about learning coding, training others,  
-				and helping people with their software needs. I recently completed a 3 month
-				immersive software enginering course at General Assembly where I learned and implemented
-				best practices for full-stack web development. Throughout the course, I worked with
-				HTML, CSS, JavaScript, React, MongoDB, Mongoose, Node.js, Python, and Django utilizing
-				Github, Visual Studio Code, and Heroku. Currently, I am looking for a software engineer 
-				position with a focus on React.
-
-			</p>
-			<p>Outside of coding, I enjoy vegetable gardening, running, and playing snare drum
-				with the Seed & Feed Marching Abominable. 
-			</p>
-			<p>If you would like to collaborate on a project, please <a href="#contact-me"><u>contact me</u></a>!</p>
-			<p>To view my projects, click <a href="#software-projects">here</a>.</p>
-		
+				</p>
+				<p>Outside of coding, I enjoy vegetable gardening, running, and playing snare drum
+					with the Seed & Feed Marching Abominable. 
+				</p>
+				<p>If you would like to collaborate on a project, please <a href="#contact-me"><u>contact me</u></a>!</p>
+				<p>To view my projects, click <a href="#software-projects">here</a>.</p>
+			
+			</div>
 		</div>
 
 		<div class="p-sections software-projects" id="software-projects">
