--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</header>  -->
 
 	<div class="topnav">
-		<a class="active" href="#home">Home</a>
+		<a class="active" href="https://rosenkrans.github.io/">Home</a>
 		<a href="#about-me-blurb">About Me</a>
 		<a href="#software-projects">Software Projects</a>
 		<a href="#contact-me">Contact Me</a>
