--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
 		
 		</div>
 
-		<!-- <div class="p-sections skills">
+		<div id="skills" class="skills">
+			<div class="p-sections skills">
+				
 
-
-		</div> -->
+			</div>
+		</div>
 
 		<div class="p-sections contact-me" id="contact-me">
 			<h3>Contact Me</h3>
