css styling annd adding images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 
 		<div id="skills" class="skills">
 			<div class="p-sections skills">
-				
+				<img src="images/HTML5_1Color_Black.png">
+				<img src="images/javascript-logo-png-12.png">
+				<img src="images/css3_black.png">				
+				<img src="images/react_logo_black.jpg">
+				<img src="images/python_black.png">
 
 			</div>
 		</div>
