--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 		<div id="skills" class="skills">
 			<div class="p-sections skills">
+				<h3>Skills</h3>
 				<img src="images/HTML5_1Color_Black.png">
 				<img src="images/javascript-logo-png-12.png">
 				<img src="images/css3_black.png">				
