--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 		<div id="skills" class="skills">
 			<div class="p-sections skills">
 				<h3>Skills</h3>
-				<img src="images/HTML5_1Color_Black.png">
-				<img src="images/javascript-logo-png-12.png">
-				<img src="images/css3_black.png">				
-				<img src="images/react_logo_black.jpg">
-				<img src="images/python_black.png">
+				<img src="images/HTML5_1Color_Black.png" class="skill-image">
+				<img src="images/css3_black.png" class="skill-image">	
+				<img src="images/javascript-logo-png-12.png" class="skill-image">							
+				<img src="images/react_logo_black.jpg" class="skill-image">
+				<img src="images/python_black.png" class="skill-image">
 
 			</div>
 		</div>
