images and styling

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 		</div>
 
 		<div id="skills" class="skills">
-			<div class="p-sections skills">
+			<div class="p-sections">
 				<h3>Skills</h3>
 				<img src="images/HTML5_1Color_Black.png" class="skill-image">
 				<img src="images/css3_black.png" class="skill-image">	
 				<img src="images/javascript-logo-png-12.png" class="skill-image">							
-				<img src="images/react_logo_black.jpg" class="skill-image">
-				<img src="images/python_black.png" class="skill-image">
+				<img src="images/react_black.png" class="skill-image">
+				<img src="images/python_logo_black.png" class="skill-image">
 
 			</div>
 		</div>
