--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 	</header>  -->
 
-	<div class="topnav">
+	<div class="topnav" position: fixed>
 		<a class="active" href="https://rosenkrans.github.io/">Home</a>
 		<a href="#about-me-blurb">About Me</a>
 		<a href="#software-projects">Software Projects</a>
