adjusting about me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div id="about-me-blurb" class="about-me">
 			<div class="p-sections">
 				<h3><a>About Me</a></h3>
-				<p class="pro-p">
+				<p class="about-paragraph">
 					I'm a Software Developer in Atlanta, GA with a background in Scrum/Project Management and IT. 
 					After years of managing others and being a certified scrum master, 
 					I realized I was more passionate about learning coding, training others,  
